# reed_solomon_ex

./: .devenv.flake.nix  .gitignore  README.md  devenv.nix  mix.exs
.github/workflows/: elixir.yml  release.yml
lib/: reed_solomon_ex.ex
native/reed_solomon_ex/: Cargo.toml
native/reed_solomon_ex/src/: lib.rs
test/: reed_solomon_ex_test.exs
